fix bug #41867 (getName is broken) add test