ext/simplexml/simplexml.c
@@ -1488,9 +1488,13 @@ SXE_METHOD(getName)
 	sxe = php_sxe_fetch_object(getThis() TSRMLS_CC);
 
 	GET_NODE(sxe, node);
-	
-	namelen = xmlStrlen(node->name);
-	RETURN_STRINGL((char*)node->name, namelen, 1);
+	node = php_sxe_get_first_node(sxe, node TSRMLS_CC);
+	if (node) {
+		namelen = xmlStrlen(node->name);
+		RETURN_STRINGL((char*)node->name, namelen, 1);
+	} else {
+		RETURN_EMPTY_STRING();
+	}
 }
 /* }}} */
 
